design-principles-02/src/main/java/com/farhad/example/design_principles02/lsp/demo1/good/Train.java
package com.farhad.example.design_principles02.lsp.demo1.good;

public class Train extends RailVehicle {

	public Train(String name) {
		super(name);
	}
	
}
