design-principles-02/src/main/java/com/farhad/example/design_principles02/lsp/demo1/bad/Truck.java
package com.farhad.example.design_principles02.lsp.demo1.bad;

public class Truck extends Vehicle {

	public Truck(String name) {
		super(name);
	}
	
}
